--- a/Quiet.css
+++ b/Quiet.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Satisfy);
 :root {
-	--version-content: "4.5"
+	--version-content: "!"
 }
 /* Version Displayed */
 
